# sqlitemm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  readme.md  test.db
include/sqlitemm/: db.hpp  stmt.hpp  value.hpp
src/: db.cpp  stmt.cpp  value.cpp
test/: CMakeLists.txt  base.cpp
