function(build_test test_name test_source)
  message(STATUS "${CMAKE_PROJECT_NAME}: adding test: \"${test_name}\"")
  add_executable(${test_name} ${test_source})
  target_link_libraries(${test_name} PRIVATE ${CMAKE_PROJECT_NAME})
  target_include_directories(${test_name} PRIVATE ${${CMAKE_PROJECT_NAME}_INCLUDES})
  target_compile_features(${test_name} PUBLIC cxx_std_17)
  set_target_properties(${test_name} PROPERTIES CXX_EXTENSIONS OFF)
endfunction()

file(GLOB test_sources LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(test_source ${test_sources})
  get_filename_component(test_name ${test_source} NAME_WE)
  build_test(${test_name} ${test_source})
endforeach()
